# derive_adhoc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.lock.example  Cargo.lock.minimal  Cargo.toml  FUTURE.md  HACKING.md  LICENCE  NOTES.md  NOTES.txt  README.md  TODO  implemented.md  proposal.md
doc/: NOTES.md  implementation.md  introduction.md  reference.md  template-syntax.md
macros/: Cargo.toml  HACKING.md  NOTES.md  boolean.rs  build.rs  capture.rs  check.rs  dbg_allkw.rs  dbg_dump.rs  definition.rs  expand.rs  framework.rs  invocation.rs  macros.rs  options.rs  paste.rs  prelude.rs  repeat.rs  syntax.rs  utils.rs
macros/expand/: paste.rs
maint/: check-blocking-todos  check-doc-links  check-keywords-documented  check-test-deps  for-every-commit  rustfmt  update-bizarre  update-minimal-versions  update-toc  update-tocs  update-versions  via-cargo-install-in-ci
playground/: README.txt  clone-full.rs  clonelike.rs  cross-product.rs  debug.rs  extremity.rs  hash.rs  hash2.rs  multi-driver.rs  partial-ord.rs  ref-version.rs  syntax.txt
src/: NOTES.md  lib.rs
test/: second.rs
tests/: Cargo.toml  debug.rs  directly.rs  hash.rs  idpaste.rs  lib.rs  list_names.rs  macrotest.rs  modules.rs  reference-examples-extract  second.rs  stderr.rs  tests.rs  trybuild.rs  tutils.rs
tests/compat/: README.md
tests/compat/new-b/: Cargo.toml
tests/compat/old-a/: Cargo.toml
tests/compat/old-b/: Cargo.toml  old-b.rs
tests/directly/: check_examples.rs
tests/directly/check_examples/: conditions.rs  contexts.rs  for_toplevels_concat.rs  possibilities.rs  reference_extract.rs
tests/expand/: clone-full.expanded.rs  clone-full.rs  clone.expanded.rs  clone.rs  conditions.expanded.rs  conditions.rs  const-generics-recent.expanded.rs  const-generics-recent.rs  dbg-all-keywords.expanded.rs  dbg-all-keywords.rs  debug.expanded.rs  debug.rs  define.expanded.rs  define.rs  dollar.expanded.rs  dollar.rs  hash.expanded.rs  hash.rs  idpaste.expanded.rs  idpaste.rs  partial-ord.expanded.rs  partial-ord.rs  ref-version.expanded.rs  ref-version.rs  second.expanded.rs  second.rs  select1.expanded.rs  select1.rs
tests/pub-export/bizarre-facade/: Cargo.toml
tests/pub-export/bizarre-macros/: Cargo.toml  build.rs
tests/pub-export/pub-a/: Cargo.toml  pub-a.rs
tests/pub-export/pub-b/: Cargo.toml  pub-b.rs
tests/stderr/: Cargo.toml  combined.real-stderr  main.real-stderr  recent.real-stderr  stderr-lib.rs
tests/ui/: badargs.rs  badargs.stderr  badinternals.rs  badinternals.stderr  badmeta.rs  badmeta.stderr  badoptions.rs  badoptions.stderr  badpaste.rs  badpaste.stderr  badreserved.rs  badreserved.stderr  badselect1.rs  badselect1.stderr
