[package]
name = "derive-adhoc"
version = "0.2.2"
edition = "2018"
license="MIT"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
description="An ergonomic way to write derive() macros"
homepage = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
repository = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
rust-version = "1.54"

autotests = false

[workspace]
members = [
	"macros",
	"tests",
	"tests/pub-export/pub-a",
	"tests/pub-export/pub-b",
	"tests/compat/old-a",
	"tests/compat/new-b",
	"tests/compat/old-b",
]

# After editing this file, you will probably need to run
#   maint/update-bizarre
# to update the "bizarre" testing versions in tests/pub-export/bizarre-*

[features]
# TODO DOCS
# The point of the features is just to get rid of dependencies.
default = ["full"]
full = ["case"]
minimal-1 = []

case = ["derive-adhoc-macros/case", "heck", "minimal-1"]

[dependencies]
derive-adhoc-macros = { path = "macros", version = "=0.2.2", default_features = false }
heck = { version = "0.4", optional = true }
