[package]
name = "derive-adhoc-macros"
version = "0.0.1"
edition = "2018"
readme = "../README.md"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
license = "MIT"
description="Macros that implement the derive_adhoc crate"
homepage = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
repository = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"

[dependencies]
itertools = "0.10"
proc-macro-crate = "1.1.3"
proc-macro2 = "1"
quote = "1"
strum = { version = "0.24", features = ["derive"] }
syn = "1"
void = "1"

[lib]
path = "macros.rs"
proc-macro = true
