[package]
name = "derive-adhoc-macros"
version = "0.2.0"
edition = "2018"
readme = "../README.md"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
license = "MIT"
description="Macros that implement the derive_adhoc crate"
homepage = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
repository = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"

# After editing this file, you will probably need to run
#   maint/update-bizarre
# to update the "bizarre" testing versions in tests/pub-export/bizarre-*

[dependencies]
heck = "0.4"
itertools = "0.10.1"
proc-macro-crate = "1.1.3"
proc-macro2 = "1"
quote = "1"
strum = { version = "0.24", features = ["derive"] }
syn = "1.0.61"
void = "1"

[lib]
path = "macros.rs"
proc-macro = true
