[package]
name = "derive-adhoc-tests"
version = "0.1.0"
edition = "2018"
license="MIT"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
description="An ergonomic way to write derive() macros"
homepage = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
repository = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
publish = false

[dependencies]
derive-adhoc = { path = "..", version = "0.1.0" }
easy-ext = "1"
glob = "0.3"

macrotest = "1"
trybuild = "1.0.38"

[lib]
path = "tests.rs"

[[test]]
name = "macrotest"
path = "macrotest.rs"

[[test]]
name = "trybuild"
path = "trybuild.rs"
