[package]
name = "derive-adhoc-tests"
version = "0.0.1"
edition = "2018"
license="MIT"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
description="An ergonomic way to write derive() macros"
homepage = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
repository = "https://gitlab.torproject.org/Diziet/rust-derive-adhoc"
publish = false

[features]
ui = []
recent = [] # We're not running with the MWRV compiler
default = []
full = ["derive-adhoc/full"]
# We can't make macrotest, ui, recent and full default features because
# in 1.54 (which is why we want this) --no-default-features doesn't work.

case = []

[dependencies]
derive-adhoc = { path = "..", version = "0.7.1", default_features = false, features = ["minimal-1"] }
easy-ext = "1"
educe = "0.4.6"
glob = "0.3"
regex = "1"

itertools = ">=0.10.1, <0.12"
proc-macro-crate = "1.1.3"
proc-macro2 = "1"
quote = "1"
sha3 = "0.10"
strum = { version = ">=0.24, <0.26", features = ["derive"] }
syn = { version = "1.0.61", features = ["extra-traits"] }
void = "1"

heck = "0.4"

macrotest = { version = "1", optional = true }
trybuild = "1.0.38"

[lib]
path = "tests.rs"

[[test]]
name = "macrotest"
path = "macrotest.rs"

[[test]]
name = "trybuild"
path = "trybuild.rs"

[[test]]
name = "stderr"
path = "stderr.rs"
