# See tests/compat/README.md
[package]
name = "old-a"
version = "0.0.1"
edition = "2018"
license="MIT"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
description="compat testing crates - old part A"
publish = false

[dependencies]
derive-adhoc = "=0.2.0"

[lib]
path = "../../pub-export/pub-a/pub-a.rs"
doc = false
doctest = false
