[package]
name = "pub-a"
version = "0.0.1"
edition = "2018"
license="MIT"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Rust derive-adhoc"]
description="pub testing crates - part A"
publish = false

[dependencies]
derive-adhoc = { path = "../../..", version = "0.2.2" }

[lib]
path = "pub-a.rs"
